@@ -1,5 +1,9 @@
 2011-03-05  Eric B. Weddington  <eric.weddington@atmel.com>
 
+	* include/avr/iom162.h: Poison deprecated items.
+
+2011-03-05  Eric B. Weddington  <eric.weddington@atmel.com>
+
 	* include/avr/iom161.h: Poison deprecated items.
 
 2011-03-05  Eric B. Weddington  <eric.weddington@atmel.com>
